[package]
name = "bdf"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
fiemap = "0.1"
indicatif = "0.16"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
multimap = "0.8"
nix = { version = "0.24", default-features = false, features = ["fs"] }
num_cpus = "1.13"
simple_logger = { version = "2.1", default-features = false, features = ["stderr"] }
structopt = "0.3"
walkdir = "2.3"
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh3"] }
